# Solarust

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  index.html  solarust.d.ts  solarust.js  solarust_bg.wasm.d.ts
.github/workflows/: rust.yml
src/: camera.rs  ground.rs  main.rs  planet_bundle.rs  planets.rs  ui.rs
src/camera/: camera_controller.rs  camera_controller_plugin.rs  camera_plugin.rs  mod.rs
src/planets/: mod.rs  planet_bundle.rs  planet_plugin.rs
src/ui/: custom_perf_ui_plugin.rs  io.rs  mod.rs  move_body.rs  move_body_plugin.rs  perf_ui.rs  planet_ui.rs  planet_ui_plugin.rs  selected_planet_ui.rs
