[package]
name = "solarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy ={version= "0.13.2", features=["wayland"]}
bevy-inspector-egui = "0.24.0"
bevy_egui = { version = "0.27", default-features = false, features = ["open_url", "default_fonts", "render"] }
egui_file = "0.17.0"
iyes_perf_ui = "0.2.3"
rand = "0.9.0-alpha.1"
serde ={version="1.0.203", features=["derive"]}
serde_json = "1.0.117"
tinyfiledialogs = "3.9.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
